--- a/YangonHomeRealEstate/favourite.html
+++ b/YangonHomeRealEstate/favourite.html
@@ -11,7 +11,7 @@
     <link rel="icon" href="image/logo.png">
     <link rel="stylesheet" href="css/custom.css">
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="fontawesome/css/all.min.css">       
+    <link rel="stylesheet" href="fontawesome/css/all.min.css">
 </head>
 <body>
     <!-- Start Logo -->    
@@ -95,47 +95,109 @@
     </div>
     <!-- End Nav -->
 
-    <!-- Start Contact -->
+    <!-- Start favoutite -->
     <div class="container my-5">
-        <h4 class="text-danger border-5 border-start border-danger mb-3 ps-3">Sign Up for Your Real Estate Access</h4>
-        <div class="row">
-            <div class="col col-12 col-md-6 col-lg-6">
-                <div class="card px-3 py-3">
-                    <form>
-                        <div class="mb-3">
-                            <div class="form-floating mb-3">
-                                <input type="text" class="form-control" id="floatingInput" placeholder="name@example.com">
-                                <label for="floatingInput">Name</label>
-                            </div>
-                            <div class="form-floating mb-3">
-                                <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-                                <label for="floatingInput">Email address</label>
-                            </div>
-                            <div class="form-floating mb-3">
-                                <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
-                                <label for="floatingPassword">Password</label>
-                            </div>
-                             <div class="form-floating mb-3">
-                                <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
-                                <label for="floatingPassword">Comfirm Password</label>
-                            </div>
-                            <div>
-                                <button type="submit" class="btn btn-danger w-100">Register Now</button>
-                                <p class="mt-2 text-secondary fst-italic">By continuing, you agree to Terms and Conditions </p>  
-                            </div>
+        <h4 class="text-danger border-5 border-start border-danger mb-5 ps-3">My Favourite List</h4>
+        <div class="row ">            
+            <div class="col-12"> 
+                <div class="card mb-3">
+                    <div class="row px-3 py-3">
+                        <div class="col-12 col-md-6 col-lg-4 mostView_hover">
+                            <a href="detail1.html">
+                                <img src="image/home1/home1.jpg" alt="" class="card-img-top mb-3 h-100 mostView_image">
+                            </a>                              
                         </div>
-                    </form>
-                </div>                
-            </div>
-            <div class="col col-12 col-md-6 col-lg-6">
-                <img src="image/register.jpg" alt="" class="img-fluid">
-            </div> 
+                        <div class="col-12 col-md-6 col-lg-8">
+                            <p>
+                                <span class="text-danger d-block fw-bold">For Sale - Land / 3500 Lakh MMK </span > <span class="fst-italic text-secondary">( Bank Loan Accept )</span>
+                                <span class="d-block mt-2"><i class="fa-solid fa-location-dot text-danger"></i> 3rd Street, Bahan Township </span>
+                            </p>
+                            <hr>
+                            <p class="text-secondary">RC Building  - Land with big coumpound - Nice View 
+                                <span class="d-block mt-1">2 Master Bed Room, 2 Bed Room, 1 Living Room, 1 Kitchen</span>                               
+                            </p>
+                            <a href="detail1.html" class="btn btn-outline-danger d-inline me-1" style="font-size: 10pt;"><i class="fa-solid fa-eye"></i> Detail</a>
+                            <a href="detail1.html" class="btn btn-outline-primary d-inline me-1" style="font-size: 10pt;"><i class="fa-solid fa-phone-volume"></i> Call</a>
+                            <a href="detail1.html" class="btn btn-outline-primary d-inline me-1" style="font-size: 10pt;"><i class="fa-solid fa-envelope"></i> Email</a>                           
+                        </div>  
+                    </div>
+                </div>
+                <div class="card mb-3">
+                    <div class="row px-3 py-3">
+                        <div class="col-12 col-md-6 col-lg-4 mostView_hover">
+                            <a href="detail1.html">
+                                <img src="image/home2.jpg" alt="" class="card-img-top mb-3 h-100 mostView_image">
+                            </a>                              
+                        </div>
+                        <div class="col-12 col-md-6 col-lg-8">
+                            <p>
+                                <span class="text-danger d-block fw-bold">For Sale - Land / 3500 Lakh MMK </span > <span class="fst-italic text-secondary">( Bank Loan Accept )</span>
+                                <span class="d-block mt-2"><i class="fa-solid fa-location-dot text-danger"></i> 3rd Street, Bahan Township </span>
+                            </p>
+                            <hr>
+                            <p class="text-secondary">RC Building  - Land with big coumpound - Nice View 
+                                <span class="d-block mt-1">2 Master Bed Room, 2 Bed Room, 1 Living Room, 1 Kitchen</span>                               
+                            </p>
+                            <a href="detail1.html" class="btn btn-outline-danger d-inline me-1" style="font-size: 10pt;"><i class="fa-solid fa-eye"></i> Detail</a> 
+                            <a href="detail1.html" class="btn btn-outline-danger d-inline me-1" style="font-size: 10pt;"><i class="fa-regular fa-heart"></i> Favorite</a>
+                            <a href="detail1.html" class="btn btn-outline-primary d-inline me-1" style="font-size: 10pt;"><i class="fa-solid fa-phone-volume"></i> Call</a>
+                            <a href="detail1.html" class="btn btn-outline-primary d-inline me-1" style="font-size: 10pt;"><i class="fa-solid fa-envelope"></i> Email</a>                       
+                        </div>  
+                    </div>
+                </div>
+                <div class="card mb-3">
+                    <div class="row px-3 py-3">
+                        <div class="col-12 col-md-6 col-lg-4 mostView_hover">
+                            <a href="detail1.html">
+                                <img src="image/home3.jpg" alt="" class="card-img-top mb-3 h-100 mostView_image">
+                            </a>                              
+                        </div>
+                        <div class="col-12 col-md-6 col-lg-8">
+                            <p>
+                                <span class="text-danger d-block fw-bold">For Sale - Land / 3500 Lakh MMK </span > <span class="fst-italic text-secondary">( Bank Loan Accept )</span>
+                                <span class="d-block mt-2"><i class="fa-solid fa-location-dot text-danger"></i> 3rd Street, Bahan Township </span>
+                            </p>
+                            <hr>
+                            <p class="text-secondary">RC Building  - Land with big coumpound - Nice View 
+                                <span class="d-block mt-1">2 Master Bed Room, 2 Bed Room, 1 Living Room, 1 Kitchen</span>                               
+                            </p>
+                            <a href="detail1.html" class="btn btn-outline-danger d-inline me-1" style="font-size: 10pt;"><i class="fa-solid fa-eye"></i> Detail</a> 
+                            <a href="detail1.html" class="btn btn-outline-danger d-inline me-1" style="font-size: 10pt;"><i class="fa-regular fa-heart"></i> Favorite</a>
+                            <a href="detail1.html" class="btn btn-outline-primary d-inline me-1" style="font-size: 10pt;"><i class="fa-solid fa-phone-volume"></i> Call</a>
+                            <a href="detail1.html" class="btn btn-outline-primary d-inline me-1" style="font-size: 10pt;"><i class="fa-solid fa-envelope"></i> Email</a>                       
+                        </div>  
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="row px-3 py-3">
+                        <div class="col-12 col-md-6 col-lg-4 mostView_hover">
+                            <a href="detail1.html">
+                                <img src="image/home4.jpg" alt="" class="card-img-top mb-3 h-100 mostView_image">
+                            </a>                              
+                        </div>
+                        <div class="col-12 col-md-6 col-lg-8">
+                            <p>
+                                <span class="text-danger d-block fw-bold">For Sale - Land / 3500 Lakh MMK </span > <span class="fst-italic text-secondary">( Bank Loan Accept )</span>
+                                <span class="d-block mt-2"><i class="fa-solid fa-location-dot text-danger"></i> 3rd Street, Bahan Township </span>
+                            </p>
+                            <hr>
+                            <p class="text-secondary">RC Building  - Land with big coumpound - Nice View 
+                                <span class="d-block mt-1">2 Master Bed Room, 2 Bed Room, 1 Living Room, 1 Kitchen</span>                               
+                            </p>
+                            <a href="detail1.html" class="btn btn-outline-danger d-inline me-1" style="font-size: 10pt;"><i class="fa-solid fa-eye"></i> Detail</a> 
+                            <a href="detail1.html" class="btn btn-outline-danger d-inline me-1" style="font-size: 10pt;"><i class="fa-regular fa-heart"></i> Favorite</a>
+                            <a href="detail1.html" class="btn btn-outline-primary d-inline me-1" style="font-size: 10pt;"><i class="fa-solid fa-phone-volume"></i> Call</a>
+                            <a href="detail1.html" class="btn btn-outline-primary d-inline me-1" style="font-size: 10pt;"><i class="fa-solid fa-envelope"></i> Email</a>                       
+                        </div>  
+                    </div>
+                </div>
+            </div>             
         </div>
     </div>
-    <!-- End Contact -->
+    <!-- End favoutite -->
 
-    <!-- Start footer -->
-    <div class="container-fluid bgBlue px-4 px-md-5 py-4 text-white">
+     <!-- Start footer -->
+     <div class="container-fluid bgBlue px-4 px-md-5 py-4 text-white">
         <div class="row">
             <div class="col-12">
                 <div class="row">
@@ -182,7 +244,7 @@
     <script src="js/jquery.min.js"></script>
     <script src="js/slick.js"></script>
     <script src="fontawesome/js/all.min.js"></script>
-    <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
-    <!-- End of JS -->
+    <script src="bootstrap/js/bootstrap.bundle.min.js"></script>   
+     <!-- End of JS -->
 </body>
 </html>
