--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
             <div class="accordion-body">
                 <h6>Job Scope(Aug 2009~July 2015)</h6>
                 <ul>
-                    <li>Designed and developed static/dynamic, E-commerce, CMS, icon-based and responsive websites.</li>
+                    <li>Designed and developed icon-based and responsive websites.</li>
                     <li>Collaborated on and proposed user-friendly website layout design ideas; worked closely with the sales teams.</li>
                     <li>Edited, updated and maintained several websites, including the contents, graphics and technical requirements.</li>
                     <li>Conceptualized and designed the printed advertisements for the company’s directory book, the GreenBook Directory.</li>
