--- a/index.html
+++ b/index.html
@@ -13,68 +13,46 @@
     <header id="header" class="headerShadow d-flex sticky-top">
         <div class="container container-xl position-relative my-3">
             <div class="row">
-                <div class="col-2">
-                    <h1>Portfolio</h1>
-                </div>
-            <div class="col-8">
-                <nav class="navbar navbar-expand-lg d-inline">            
-                <div class="container-fluid ">    
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                        <a href="#about" class="nav-link navs mx-lg-3 animated-link">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#projects" class="nav-link navs mx-lg-3 animated-link">Projects</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#experience" class="nav-link navs mx-lg-3 animated-link">Experience</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#skill" class="nav-link navs mx-lg-3 animated-link">Skill</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#contact" class="nav-link navs mx-lg-3 animated-link">Contact</a>
-                    </li>
-                    </ul>
+                <div class="col-12 col-md-8 col-lg-9">
+                    <div class="row">
+                        <div class="col-6 col-sm-6 col-md-6">
+                            <h2>Portfolio</h2>
+                        </div>
+                        <div class="col-6 col-sm-6 col-md-6">
+                            <nav class="navbar navbar-expand-lg float-end">
+                                <div class="container-fluid">
+                                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                                    <span class="navbar-toggler-icon"></span>
+                                </button>
+                                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                                        <li class="nav-item">
+                                        <a href="#about" class="nav-link navs mx-lg-3 animated-link">About</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="#projects" class="nav-link navs mx-lg-3 animated-link">Projects</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="#experience" class="nav-link navs mx-lg-3 animated-link">Experience</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="#skill" class="nav-link navs mx-lg-3 animated-link">Skill</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="#contact" class="nav-link navs mx-lg-3 animated-link">Contact</a>
+                                    </li>
+                                    </ul>
+                                </div>
+                                </div>
+                            </nav>
+                        </div>
                     </div>
                 </div>
-                </nav>
-            </div>
-            <div class="col-2 float-end d-inline">
-                <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
-                    Download CV<i class="fa-solid fa-arrow-down ms-3"></i>
-                    </button> 
-                <!-- Start Offcanvas 
-                <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
-                Download CV
-                </button>          
-                <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
-                <div class="offcanvas-header">
-                    <h5 class="offcanvas-title" id="offcanvasExampleLabel">Offcanvas</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                <div class="col-12 col-md-4 col-lg-3">
+                    <a href="https://drive.google.com/file/d/1KZ4aUcaTgARcC5Ty8BElLorJ57dCGqHn/view" target="_blank" class="btn btn-primary btn-md" >
+                        Download CV<i class="fa-solid fa-arrow-down ms-3"></i>
+                    </a> 
                 </div>
-                <div class="offcanvas-body">
-                    <div>
-                    Some text as placeholder. In real life you can have the elements you have chosen. Like, text, images, lists, etc.
-                    </div>
-                    <div class="dropdown mt-3">
-                    <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown">
-                        Dropdown button
-                    </button>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">Action</a></li>
-                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                        <li><a class="dropdown-item" href="#">Something else here</a></li>
-                    </ul>
-                    </div>
-                </div>
-                </div>  
-                End Offcanvas  -->
-            </div>
             </div>
         </div>
     </header>
@@ -107,20 +85,20 @@
   </div>
 
 <!-- Start About Section -->
-<section class="container my-5" id="about">
+<section class="container my-5 pb-5" id="about">
     <div class="text-center">
         <p class="text-secondary">Get To Know More</p>
         <h2 class="fs-2 fw-bold">About Me</h2>
     </div>
     <div class="row my-4">
         <div class="col-12">
-            <p class="my-md-5">              
+            <p class="">              
               Hello! I am Ei EI PHYU.  I graduated with <i class="text-secondary">B.C.Sc (Hons) - Computer Science from University of Computer Studies, Yangon</i> I accomplished the Apply Web Development with PHP course and No Code Web Development course.Even though I worked as the Web/Graphic Designer role in previous years, I would like to improve and change my profession as Web Developer and I desire to challenge my carrier.</p>
         </div>
         <div class="col-12">
             <div class="row">
                 <div class="col gx-5">
-                    <h4 class="fw-bold my-3"><i class="fa-solid fa-circle-info fs-2 me-3"></i>Basic Information</h4>
+                    <h4 class="fw-bold my-3"><i class="fa-solid fa-circle-info fs-2 me-3 text-primary"></i>Basic Information</h4>
                     <ul class="list-group">
                         <li class="list-group-item">Date of birth : 8 December 1985
                         </li>
@@ -129,7 +107,7 @@
                     </ul>
                 </div>
                 <div class="col">
-                    <h4 class=" fw-bold my-3"> <i class="fa-solid fa-graduation-cap fs-2 me-3"></i>Education</h4>
+                    <h4 class=" fw-bold my-3"> <i class="fa-solid fa-graduation-cap fs-2 me-3 text-primary"></i>Education</h4>
                     <ul class="list-group">
                         <li class="list-group-item">
                           Graducated: B.C.Sc - Honour (Computer Science)
@@ -146,9 +124,9 @@
 <!-- End About Section -->
 
 <!-- Start Projects Section  -->
-<section class="container my-5" id="projects">
+<section class="container my-5 pb-5" id="projects">
     <div class="text-center">
-        <p class="text-secondary">Browse My Recent</p>
+        <p class="text-secondary  mt-5">Browse My Recent</p>
         <h2 class="fs-2 fw-bold mb-md-4">Projects</h2>
     </div>
     <div class="row row-cols-1 row-cols-lg-3 my-5">
@@ -233,16 +211,16 @@
         <p class="text-secondary">Find out my previous</p>
         <h2 class="fs-2 fw-bold">Web/Graphic Designer Experience</h2>
     </div>
-    <div class="accordion" id="accordionExample">
+    <div class="accordion mt-5" id="accordionExample">
         <div class="accordion-item">
           <h2 class="accordion-header">
             <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                Web/Graphic Designer - Myandeco Co. Ltd @ Myanmar - 
+                <h5 class="text-primary">Web/Graphic Designer - Myandeco Co. Ltd @ Myanmar</h5>
             </button>
           </h2>
           <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
             <div class="accordion-body">
-                <h6>Job Scope (Sept 2017 ~ June 2019)</h6>
+                <h6 class="fw-bold">Job Scope (Sept 2017 ~ June 2019)</h6>
                     <ul>
                         <li>Managed and updated the company’s website along with client websites.</li>
                         <li>Collaborated on and proposed design concepts for catalogue books advertisements.</li>
@@ -254,12 +232,12 @@
         <div class="accordion-item">
           <h2 class="accordion-header">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                Web/Graphic Designer - Promedia Directories Pte Ltd @ Singapore
+               <h5 class="text-primary">Web/Graphic Designer - Promedia Directories Pte Ltd @ Singapore</h5>
             </button>
           </h2>
           <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
             <div class="accordion-body">
-                <h6>Job Scope(Aug 2009~July 2015)</h6>
+                <h6 class="fw-bold">Job Scope(Aug 2009~July 2015)</h6>
                 <ul>
                     <li>Designed and developed icon-based and responsive websites.</li>
                     <li>Collaborated on and proposed user-friendly website layout design ideas; worked closely with the sales teams.</li>
@@ -273,12 +251,12 @@
         <div class="accordion-item">
           <h2 class="accordion-header">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                Junior Web/Graphic Designer - DPS Company Ltd @ Myanmar	
+                <h5 class="text-primary">Junior Web/Graphic Designer - DPS Company Ltd @ Myanmar</h5>	
             </button>
           </h2>
           <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
             <div class="accordion-body">
-                <h6>Job Scope (Jan 2008~May 2009)</h6>
+                <h6 class="fw-bold">Job Scope (Jan 2008~May 2009)</h6>
                 <ul>
                     <li>Collaborated with senior teams members to design, develop maintain and ensure the ongoing updates for websites.</li>
                     <li>Designed graphic arts such as Visiting cards, pamphlets, and other advertisements.</li>
@@ -287,7 +265,6 @@
           </div>
         </div>
       </div>
-    <hr class="my-5">
 </section>
 <!-- End Experience Section -->
 
@@ -401,9 +378,9 @@
         <h2 class="fs-2 fw-bold mb-md-4">Contact Me</h2>
     </div>
     <ul class="nav p-3 justify-content-center">
-        <li class="nav-item me-5 mb-2"><i class="fa-solid fa-envelope fa-xl me-3"></i>miss.eiphyu@gmail.com
+        <li class="nav-item me-5 mb-2"><i class="fa-solid fa-envelope fa-xl me-3 text-primary"></i>miss.eiphyu@gmail.com
         </li>
-        <li class="nav-item"><i class="fa-solid fa-phone fa-xl me-3"></i>09 9737 91 484
+        <li class="nav-item"><i class="fa-solid fa-phone fa-xl me-3 text-primary"></i>09 9737 91 484
         </li>
     </ul>
 </section>
