--- a/index.html
+++ b/index.html
@@ -213,6 +213,22 @@
     </div>
     <div class="accordion mt-5" id="accordionExample">
         <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseO" aria-expanded="true" aria-controls="collapseO">
+                  <h5 class="text-primary">Junior Web Developer (Remote) – HeinLearn Center</h5>
+              </button>
+            </h2>
+            <div id="collapseO" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+              <div class="accordion-body">
+                  <h6 class="fw-bold">Job Scope (May 2024 ~ Current)</h6>
+                      <ul>
+                          <li>Creating E-learning Project with HeinLearn Team</li>
+                          <li>Collaborating with team for Database, Frontend and Backend </li>                          
+                      </ul>
+              </div>
+            </div>
+          </div>
+        <div class="accordion-item">
           <h2 class="accordion-header">
             <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                 <h5 class="text-primary">Web/Graphic Designer - Myandeco Co. Ltd @ Myanmar</h5>
