--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                 <h5 class="text-primary">Web/Graphic Designer - Myandeco Co. Ltd @ Myanmar</h5>
             </button>
           </h2>
-          <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+          <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
             <div class="accordion-body">
                 <h6 class="fw-bold">Job Scope (Sept 2017 ~ June 2019)</h6>
                     <ul>
