--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-md-4 col-lg-3">
-                    <a href="https://drive.google.com/file/d/1KZ4aUcaTgARcC5Ty8BElLorJ57dCGqHn/view" target="_blank" class="btn btn-primary btn-md" >
+                    <a href="https://drive.google.com/file/d/1SipwVycoKMdril5xQg9Vvey0lVjSjOun/view?usp=drive_link" target="_blank" class="btn btn-primary btn-md" >
                         Download CV<i class="fa-solid fa-arrow-down ms-3"></i>
                     </a> 
                 </div>
@@ -222,7 +222,7 @@
               <div class="accordion-body">
                   <h6 class="fw-bold">Job Scope (May 2024 ~ Current)</h6>
                       <ul>
-                          <li>Creating E-learning Project with HeinLearn Team</li>
+                          <li>•	Creating E-learning Project by using Laravel 10 with HeinLearn Team</li>
                           <li>Collaborating with team for Database, Frontend and Backend </li>                          
                       </ul>
               </div>
@@ -283,7 +283,6 @@
       </div>
 </section>
 <!-- End Experience Section -->
-
 
 <!-- Start Skill Section -->
 <section class="container my-5" id="skill">
@@ -350,13 +349,13 @@
                         </li>
                         <li class="p-2 fw-bold">
                             <div><i class="fa-solid fa-arrow-right me-3 mb-2"></i>Git</div>
-                            <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                                <div class="progress-bar" style="width: 50%">50%</div>
+                            <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">
+                                <div class="progress-bar" style="width: 30%">30%</div>
                         </li>
                         <li class="p-2 fw-bold">
                             <div><i class="fa-solid fa-arrow-right me-3 mb-2"></i>Wordpress</div>
-                            <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                                <div class="progress-bar" style="width: 50%">50%</div>
+                            <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">
+                                <div class="progress-bar" style="width: 30%">30%</div>
                             </div>
                         </li>
                     </ul>
